--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -43,32 +43,34 @@
 
     <Button
         android:id="@+id/btnLogin"
-        android:layout_width="300dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="228dp"
+        android:layout_width="280dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="356dp"
         android:background="@drawable/btn_dark"
         android:elevation="6dp"
         android:text="Log In"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
-        app:layout_constraintTop_toBottomOf="@id/tagline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.519"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tagline" />
 
     <Button
         android:id="@+id/btnRegister"
-        android:layout_width="282dp"
+        android:layout_width="280dp"
         android:layout_height="54dp"
         android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_light"
         android:elevation="6dp"
         android:text="Register"
-        android:textSize="24sp"
         android:textAllCaps="false"
         android:textColor="#000000"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
