--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -99,7 +99,9 @@
                     android:text="100%"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
-                    android:layout_marginEnd="6dp"/>
+                    android:layout_marginEnd="6dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"/>
 
                 <ImageView
                     android:src="@drawable/ic_battery"
@@ -111,7 +113,9 @@
                     android:text="strong connection"
                     android:textColor="#FFFFFF"
                     android:textSize="14sp"
-                    android:layout_marginEnd="6dp"/>
+                    android:layout_marginEnd="6dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"/>
 
                 <ImageView
                     android:src="@drawable/ic_signal"
